# Hair_Care_Recommendation_Chatbot

./: .gitignore  README.md
HairFastGAN/: demo.ipynb
HairFastGAN/swinface_project/: inference.py
HairFastGAN/swinface_project/analysis/: verification.py
HairFastGAN_package/: .gitignore  detect_and_swap.py  hair_swap.py  main.py  setup.cfg  swinface.py
HairFastGAN_package/src/models/CtrlHair/external_code/face_parsing/: my_parsing_util.py
HairFastGAN_package/src/models/CtrlHair/shape_branch/: config.py  model.py  shape_util.py  solver.py
