[metadata]
name = hairstyle_recommendation_01
version = 0.0.01
author = Le Phu Trong
author_email = lephutrong1002@gmail.com
description = A simple Python package
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Gnort1002/Hair_Care_Recommendation_Chatbot
project_urls =
    Bug Tracker = https://github.com/Gnort1002/Hair_Care_Recommendation_Chatbot-/issues
    repository = https://github.com/Gnort1002/Hair_Care_Recommendation_Chatbot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src